changed rss title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="alternate" type="application/rss+xml" title="My Site RSS" href="/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Kyle Skinner Blog RSS" href="/feed.xml" />
     <title>
       {% if page.title %}
         {{'Kyle Skinner | ' | append:page.title}}
@@ -14,7 +14,7 @@
         Default Title Page
       {% endif %}
     </title>
-    
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
     <!-- Custom Fonts -->
