--- a/css/creative.css
+++ b/css/creative.css
@@ -25,7 +25,7 @@ hr.light {
 }
 
 a {
-    color: white;
+    color: #0086AD;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
