--- a/less/creative.less
+++ b/less/creative.less
@@ -12,6 +12,12 @@ body {
     .serif-font;
 }
 
+table {
+    width: 50%;
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
 hr {
     border-color: @theme-primary;
     border-width: 3px;
