removed homework blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,24 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="alternate" type="application/rss+xml" title="Kyle Skinner Blog RSS" href="/feed.xml" />
+    <style>
+      table {
+        width: 80%
+      }
+      table, th, td {
+          border: 1px solid black;
+          border-collapse: collapse;
+      }
+
+      th {
+        text-align: center;
+      }
+
+      th, td {
+        padding: 15px;
+        text-align: center;
+      }
+    </style>
     <title>
       {% if page.title %}
         {{'Kyle Skinner | ' | append:page.title}}
