--- a/css/creative.css
+++ b/css/creative.css
@@ -4,6 +4,11 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+ #icon_link {
+   text-decoration: none;
+   color: white;
+ }
+
 html,
 body {
     width: 100%;
