--- a/css/creative.css
+++ b/css/creative.css
@@ -31,7 +31,7 @@ hr.light {
 }
 
 a {
-    color: #0086AD;
+    color: white;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
