--- a/css/creative.css
+++ b/css/creative.css
@@ -26,8 +26,14 @@ hr.light {
     border-color: #fff;
 }
 
+i {
+  transition: all .35s;
+  color: white;
+}
+
+
 i:hover {
-  transform: scale(1.5)
+  transform: scale(1.5);
 }
 
 }
