added name to meta data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Kyle Skinner">
     <link rel="alternate" type="application/rss+xml" title="Kyle Skinner Blog RSS" href="/feed.xml" />
     <style>
       table {
@@ -29,7 +29,7 @@
       {% if page.title %}
         {{'Kyle Skinner | ' | append:page.title}}
       {% else %}
-        Default Title Page
+        Kyle Skinner
       {% endif %}
     </title>
 
